fixed spacing for modal liquidity buttons (#10894)

--- a/packages/augur-simplified/src/modules/modal/modal.styles.less
+++ b/packages/augur-simplified/src/modules/modal/modal.styles.less
@@ -54,12 +54,15 @@
       margin-top: @size-24;
     }
 
+    > button {
+      margin-bottom: @size-8;
+    }
+
     > div:first-of-type {
       margin-top: @size-24;
     }
 
     > button:last-of-type {
-      // margin-bottom: @size-24;
       margin-bottom: 0;
     }
 
